--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,11 @@ tools/k7mofs
 *.fd
 *.m5
 *.k5
+*.m7
 res
 src*/*.txt
 srcM5/*.exo2
+srcM7/*.exo2
 srcTO/PACKM3*.bin
 tools/exomizer2/*.o
 tools/exomizer2/exoraw
